<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_signUp"
          android:title="@string/action_signUp" app:showAsAction="never" />
    <item android:id="@+id/action_memo"
          android:title="@string/action_memo" app:showAsAction="never" />
    <item android:id="@+id/action_buttons"
          android:title="@string/action_buttons" app:showAsAction="never" />
    <item android:id="@+id/action_spinners"
          android:title="@string/action_spinners" app:showAsAction="never" />
    <item android:id="@+id/action_alerts"
          android:title="@string/action_alerts" app:showAsAction="never" />
    <item android:id="@+id/action_firebase"
          android:title="@string/action_firebase" app:showAsAction="never" />
    <item android:id="@+id/action_checkboxes"
          android:title="@string/action_checkboxes" app:showAsAction="never"/>
    <item android:id="@+id/action_listView"
          android:title="@string/action_listView" app:showAsAction="never"/>
    <item android:id="@+id/action_listView2"
          android:title="@string/action_listView2" app:showAsAction="never"/>
    <item android:id="@+id/action_listView3"
          android:title="@string/action_listView3" app:showAsAction="never"/>
    <item android:id="@+id/action_remove"
          android:title="@string/action_remove" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_logIn"
          android:title="@string/action_logIn" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_logOut"
          android:title="@string/action_logOut" app:showAsAction="ifRoom" />

</menu>
