<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".checkbox.MainActivity">

    <CheckBox
            android:text="@string/auto_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Switch
            android:text="@string/auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/switch1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            android:id="@+id/radioGroup1">
        <RadioButton
                android:text="@string/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="91dp"
                tools:layout_editor_absoluteX="116dp" android:id="@+id/radioRed" android:layout_weight="1"
                android:background="@color/transparentRed"/>
        <RadioButton
                android:text="@string/yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioYellow" android:layout_weight="1"
                android:background="@color/transparentYellow"/>
        <RadioButton
                android:text="@string/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioBlue" android:layout_weight="1"
                android:background="@color/transparentBlue"/>
    </RadioGroup>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1" android:orientation="horizontal"
            android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioCat" android:layout_weight="1"
                android:drawableLeft="@drawable/animal_cat_small"/>
        <RadioButton
                android:text="@string/dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioDog" android:layout_weight="1"
                android:drawableLeft="@drawable/animal_dog_small"/>
        <RadioButton
                android:text="@string/radioOwl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioOwl" android:layout_weight="1"
                android:drawableLeft="@drawable/animal_owl_small"/>
    </RadioGroup>
    <ImageView
            android:src="@drawable/animal_cat_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iconView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/iconView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
</android.support.constraint.ConstraintLayout>